# hiomapd

./: .gitignore  .markdownlint.yaml  MAINTAINERS  Makefile  Makefile.am  OWNERS  README.md  backend.h  bootstrap.sh  common.c  common.h  configure.ac  control.c  control_dbus.c  control_dbus.h  control_legacy.c  dbus.h  endian.hpp  flash.c  flash.h  flash_partition.h  format-code.sh  groups  lpc.c  lpc.h  lpc_reset.c  mbox.h  mbox_dbus.h  mboxctl.c  mboxd.c  mboxd.h  mboxd_dbus.c  mboxd_dbus.h  mboxd_flash.c  mboxd_flash.h  mboxd_flash_location.hpp  mboxd_flash_partition.cpp  mboxd_flash_partition.hpp  mboxd_flash_partition_intf.cpp  mboxd_flash_partition_intf.hpp  (+38 more)
Documentation/: changelog  mbox_protocol.md  mboxctl.md  mboxd.md  protocol.md
file/: Makefile.am.include  backend.c  flash.c
m4/: ax_code_coverage.m4
mtd/: backend.c  flash.c
test/: Makefile.am.include  backend.c  bmc_event_ack_v2.c  close_window_v2.c  copy_flash.c  create_oversize_window.c  create_pnor_partition_table.cpp  create_read_window_pnor.cpp  create_read_window_v2.c  create_read_window_vpnor.cpp  create_write_window_v2.c  create_zero_size_window.c  erase_flash.c  flash_copy.c  flash_erase.c  flash_write.c  get_flash_info_v2.c  get_mbox_info_v2.c  get_mbox_info_v2_timeout.c  implicit_flush.c  invalid_command.c  lock_flash_v3.c  mark_read_dirty.c  mark_write_dirty_v2.c  mark_write_erased_v2.c  mbox.c  mbox.h  meson.build  read_window_cycle.c  read_window_mark_write_erased.c  read_window_write_flush.c  request_high_version.c  request_low_version.c  reset_state.c  sanity.c  sequence_numbers.c  system.c  system.h  tmpf.c  tmpf.h  (+4 more)
test/vpnor/: Makefile.am.include  create_pnor_partition_table.cpp  create_read_window_oob.cpp  create_read_window_partition_exists.cpp  create_read_window_partition_invalid.cpp  create_read_window_remap.cpp  create_read_window_size.cpp  create_read_window_straddle_partitions.cpp  create_read_window_toc.cpp  create_read_window_vpnor.cpp  create_write_window_ro_partition.cpp  create_write_window_rw_partition.cpp  create_write_window_unmapped.cpp  dump_flash.cpp  read_patch.cpp  tmpd.cpp  tmpd.hpp  toc_flags.cpp  toc_lookup_failed.cpp  toc_lookup_found.cpp  toc_missing_file.cpp  toc_no_end.cpp  toc_no_name.cpp  toc_no_start.cpp  toc_no_version.cpp  toc_overlap.cpp  toc_start_gt_end.cpp  write_flash_vpnor.cpp  write_patch.cpp  write_patch_resize.cpp  write_prsv.cpp  write_ro.cpp  write_rw.cpp
vpnor/: Makefile.am.include  README.md  backend.cpp  backend.h  flash.cpp  lpc_reset.cpp  mboxd_flash.cpp  mboxd_lpc_reset.cpp  mboxd_msg.cpp  mboxd_msg.hpp  mboxd_pnor_partition_table.cpp  mboxd_pnor_partition_table.h  meson.build  partition.cpp  partition.hpp  pnor_partition.cpp  pnor_partition.hpp  pnor_partition_table.cpp  pnor_partition_table.hpp  protocol.cpp  protocol.h  protocol_negotiate_version.cpp  table.cpp  table.hpp  transport_mbox.cpp
vpnor/test/: Makefile.am.include  create_aligned_window.cpp  create_pnor_partition_table.cpp  create_read_window_oob.cpp  create_read_window_partition_exists.cpp  create_read_window_partition_invalid.cpp  create_read_window_remap.cpp  create_read_window_size.cpp  create_read_window_straddle_partitions.cpp  create_read_window_toc.cpp  create_write_window_ro_partition.cpp  create_write_window_rw_partition.cpp  create_write_window_unmapped.cpp  dump_flash.cpp  force_readonly_toc.cpp  meson.build  read_patch.cpp  tmpd.cpp  tmpd.hpp  toc_flags.cpp  toc_lookup_failed.cpp  toc_lookup_found.cpp  toc_missing_file.cpp  toc_missing_file_mem_corrupt.cpp  toc_missing_file_reset.cpp  toc_no_end.cpp  toc_no_name.cpp  toc_no_start.cpp  toc_no_version.cpp  toc_overlap.cpp  toc_start_gt_end.cpp  write_patch.cpp  write_patch_resize.cpp  write_prsv.cpp  write_ro.cpp  write_rw.cpp  write_toc.cpp
xyz/openbmc_project/Mboxd/Internal/: Manager.interface.yaml
xyz/openbmc_project/mboxd/Internal/: Manager.interface.yaml
